--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<header>
-    <div>
+<header class= "navbar navbar-fixed-top navbar-inverse">
+    <div class="container">
     <%= link_to "勤怠システム", root_path, id: "logo" %>
         <nav>
-            <ul class = example>
+            <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to "トップへ", root_path %></li>
                 <li><%= link_to "ログイン", "#" %></li>
             </ul>
