--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,15 @@
 <%= form_for(@user) do |f| %>
-    <div class="form-group">
-        <%= f.label :name, "お名前" %>
-        <%= f.text_field :name, class: "form-control" %>
-    </div>
-    <div class = "form-group">
-        <%= f.label :email, "メールアドレス" %>
-        <%= f.text_field :email, class: "form-control" %>
-    </div>
-    <div class= "form-group">
-        <%= f.label :password, "パスワード" %>
-        <%= f.text_field :password, class: "form-control" %>
-    </div>
-    <div class= "form-group">
-        <%= f.label :password
-    </div>
+      <%= f.label :name, "名前" %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email, "メールアドレス" %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password, "パスワード" %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "パスワード確認" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "作成", class: "btn btn-primary" %>
+    <% end %>
