--- a/app/assets/stylesheets/costum.scss
+++ b/app/assets/stylesheets/costum.scss
@@ -75,3 +75,47 @@ p {
     }
 }
 
+/* various */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+
+/* table */
+
+table {
+  width: 100%;
+  vertical-align: middle;
+  text-align: center;  
+}
+
+th {
+  vertical-align: middle;
+  text-align: center;  
+}
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
