--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,23 @@
-<% provide(:title ,"アカウント作成") %>
-<% provide(:button_text, '作成する') %>
-<h1>アカウント作成</h1>
+<% provide(:title, 'ユーザー作成') %>
+<h1>ユーザー新規作成</h1>
+
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <%= render 'form' %>
-    </div>
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= render "shared/errors_messages" %>
+      <%= f.label :name, "名前" %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :email, "メールアドレス" %>
+      <%= f.email_field :email, class: 'form-control' %>
+
+      <%= f.label :password, "パスワード" %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation, "パスワード確認" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+      <%= f.submit "作成", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
