--- a/app/assets/stylesheets/costum.scss
+++ b/app/assets/stylesheets/costum.scss
@@ -119,3 +119,13 @@ input, textarea, select, .uneditable-input {
     color: $state-danger-text;
   }
 }
+
+.users {
+  light-style: none;
+  margin : 0;
+  li{
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-light;
+  }
+}
