--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,19 @@
 <%= form_for(@user) do |f| %>
+      <%= render "shared/errors_messages" %>
       <%= f.label :name, "名前" %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :email, "メールアドレス" %>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+      
+      <%= f.label :department, "所属" %>
+      <%= f.text_field :department, class: 'form-control' %>
 
       <%= f.label :password, "パスワード" %>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, "パスワード確認" %>
-      <%= f.password_field :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "作成", class: "btn btn-primary" %>
+      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     <% end %>
