--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
                          class: "btn btn-xs btn-primary" %></td>
       <td>指定勤務時間: <%= format_basic_time(@user.work_time) %></td>
       <td>基本時間: <%= format_basic_time(@user.basic_time) %></td>
-      <td>月の初日</td>
+      <td>月の初日<%= @first_day.to_s(:date) %></td>
     </tr>
 
     <tr>
@@ -19,8 +19,8 @@
                       '未所属'
                       end %></td>
       <td>氏名：<%= @user.name %></td>
-      <td>出勤日数</td>
-      <td>月の末日</td>
+      <td>出勤日数: <%= @worked_sum %></td>
+      <td>月の末日<%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
   <table class="table-bordered table-striped table-condensed">
@@ -50,19 +50,42 @@
       <tr>
         <td><%= day.worked_on.to_s(:date) %></td>
         <td><%= %w(日 月 火 水 木 金 土)[day.worked_on.wday] %></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
+        <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+        <td>
+          <% if day.worked_on == Date.today && day.started_at.nil? %>
+            <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
+          <% end %>
+        </td>
+        <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
+        <td><%= day.finished_at.to_s(:min) if day.finished_at.present? %></td>
+        <td>
+          <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
+            <%= button_to "退社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
+          <% end %>
+        </td>
+        <td>
+          <% if day.started_at.present? && day.finished_at.present? %>
+          <%= working_times(day.started_at, day.finished_at) %>
+          <% seconds = (day.finished_at - day.started_at).to_i %>
+          <% @total_seconds = @total_seconds.to_i + seconds %>
+        <% end %>
+        </td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <% end %>
     </tbody>
-    
+    <tfoot>
+      <tr>
+        <td colspan = "2">総合勤務時間 <%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
+        <td colspan = "6"></td>
+        <td>在社時間合計:<%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tfoot>
     </table>
 </div>
