attendances-edit-page

--- a/app/assets/stylesheets/costum.scss
+++ b/app/assets/stylesheets/costum.scss
@@ -129,3 +129,8 @@ input, textarea, select, .uneditable-input {
     border-bottom: 1px solid $gray-light;
   }
 }
+.btn-attendances-update {
+  width: 40%;
+  margin: auto;
+  
+}
