--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "ホーム", root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "ユーザ一覧", users_path %></li>
+          <li><% if current_user.admin? %>
+            <%= link_to "ユーザ一覧", users_path %>
+            </li>
+          <li><% if @user.present? %>
+            <%= link_to "基本情報変更", basic_info_path(1) %>
+            <% end %>
+          <% end %>
+          </li> 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
