--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -2,5 +2,5 @@
 <div class= "jumbotron center">
 <h1>勤怠システム</h1>
 <%= link_to "ログイン",login_path, class: "btn btn-primary btn-lg" %>
-<p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
+<p>アカウント作成は<%= link_to "こちら", signup_url %>から</p>
 </div>
