--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -7,10 +7,10 @@
     <%= form_for(@user, url: update_basic_info_path(params: {id: @user.id})) do |f| %>
       <%= render "shared/errors_messages", object: @user %>
 
-      <%= f.label :basic_time %>
+      <%= f.label t('.basic_time') %>
       <%= f.time_field :basic_time, class: 'form-control' %>
 
-      <%= f.label :work_time %>
+      <%= f.label t('.work_time') %>
       <%= f.time_field :work_time, class: 'form-control' %>
 
       <%= f.submit "更新する", class: "btn btn-primary" %>
