--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% require 'rounding' %>
 <% provide(:title, '勤怠表示') %>
 <div>
   <table class="table-bordered table-condensed">
@@ -56,14 +57,14 @@
             <% end%>
                     </td>
         <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
-        <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+        <td><%= day.started_at.floor_to(60*15).to_s(:min) if day.started_at.present? %></td>
         <td>
           <% if day.worked_on == Date.today && day.started_at.nil? %>
             <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
           <% end %>
         </td>
         <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
-        <td><%= day.finished_at.to_s(:min) if day.finished_at.present? %></td>
+        <td><%= day.finished_at.floor_to(60*15).to_s(:min) if day.finished_at.present? %></td>
         <td>
           <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
             <%= button_to "退社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
