--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,15 +4,19 @@
 <% else %>
 <h1>ユーザ一覧</h1>
 <% end %>
+</div><!-- nav-left -->
+    <div id="nav-search">
+      <p id="nameserch">ユーザー名検索</p>
+        <%= form_tag(users_path, method: "get") do %>
+            <div class="input-group">
+                <%= text_field_tag :name, params[:name], placeholder: "ユーザー名を入力してください", class: "form-control" %>
+                <span class="input-group-btn">
+                    <%= button_tag "検索", :name => nil, class: "btn btn-primary" %>
+                </span>
+            </div>
+        <% end %>
+</div><!-- nav-search -->
 <%= will_paginate %>
-
-<p>ユーザー検索</p>
-<div class = "name_serch">
-<%= form_tag(users_path, :method => 'get' ) do %>
-  <%= text_field_tag :name, params[:name] %>
-  <%= submit_tag '検索', :name => nil %>
-<% end %>
-</div>
 <ul class="users">
   <%= render @users %>
 </ul>
