--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,7 +72,7 @@
         </td>
         <td>
           <% if day.started_at.present? && day.finished_at.present? %>
-          <%= working_times(day.started_at, day.finished_at) %>
+          <%= working_times(day.started_at.floor_to(60*15), day.finished_at.floor_to(60*15)) %>
           <% seconds = (day.finished_at - day.started_at).to_i %>
           <% @total_seconds = @total_seconds.to_i + seconds %>
         <% end %>
