--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
 <li>
-  <%= link_to user.name, user %>
+  <%= link_to user.name, user %><br>
   <% if current_user.admin? && !current_user?(user) %>
+    | <%= link_to "削除", user, method: :delete, 
+                         data: { confirm: "削除してよろしいですか？" } %> <br>
     | <%= link_to "基本情報変更", basic_info_path(user) %>
-    | <%= link_to "削除", user, method: :delete,
-                         data: { confirm: "削除してよろしいですか？" } %>
   <% end %>
 </li>
