--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,50 @@
-<li>
-  <%= link_to user.name, user %><br>
+<h5><%= user.name %></h5>
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "削除", user, method: :delete, 
                          data: { confirm: "削除してよろしいですか？" } %> <br>
     | <%= link_to "基本情報変更", basic_info_path(user) %>
+    <!-- アコーディオン -->
+ <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                <a style="display:block; color:white; " class= " btn button-small-size btn-primary" data-toggle="collapse" data-parent="#sampleAccordion" href="#sampleAccordionCollapse<%= user.id %>" >
+          <h5>編集</h5>
+                </a>
+            </h3>
+        </div>
+    <div id=  "sampleAccordionCollapse<%= user.id %>"  class="panel-collapse collapse">
+        <div class="panel-body">
+       <%= form_for(user, remote: true, html:{:id => ''}) do |f| %>
+        <%= f.label :name, "名前"%>
+        <%= f.text_field :name, class: 'form-control' %>
+
+        <%= f.label :email, "メールアドレス"%>
+        <%= f.email_field :email, class: 'form-control' %>
+
+        <%= f.label :department, "所属"%>
+        <%= f.text_field :department, class: 'form-control' %>
+
+        <%= f.label :employee_number, "社員番号"%>
+        <%= f.number_field :employee_number, class: 'form-control' %>
+
+        <%= f.label :uid, "カードID"%>
+        <%= f.text_field :uid, class: 'form-control' %>
+
+        <%= f.label :password, "パスワード"%>
+        <%= f.password_field :password, class: 'form-control' %>
+
+        <%= f.label :work_time, "基本勤務時間" %>
+        <%= f.time_field :work_time, class: 'form-control' %>
+
+        <%= f.label :designated_work_start_time, "指定勤務開始時間" %>
+        <%= f.time_field :designated_work_start_time, class: 'form-control' %>
+
+        <%= f.label :designated_work_end_time, "指定勤務終了時間" %>
+        <%= f.time_field :designated_work_end_time, class: 'form-control' %>
+
+        <%= submit_tag '編集する' , class: "btn btn-primary"  %>
+        </div>
+    </div>
+  </div>
   <% end %>
-</li>
+  <% end %>
