--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,8 +6,8 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
       
-      <%= f.label :department %>
-      <%= f.text_field :department, class: 'form-control' %>
+      <%= f.label :affiliation %>
+      <%= f.text_field :affiliation, class: 'form-control' %>
 
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
