--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -21,8 +21,8 @@
         <%= f.label :email, "メールアドレス"%>
         <%= f.email_field :email, class: 'form-control' %>
 
-        <%= f.label :department, "所属"%>
-        <%= f.text_field :department, class: 'form-control' %>
+        <%= f.label :affiliation, "所属"%>
+        <%= f.text_field :affiliation, class: 'form-control' %>
 
         <%= f.label :employee_number, "社員番号"%>
         <%= f.number_field :employee_number, class: 'form-control' %>
