--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,12 +12,13 @@
         <%= link_to "ホーム", root_path %>
         </li>
         <% end %>
-        <% if logged_in? %>
+        <% if logged_in? || current_user.admin? %>
+        <%# if current_user.admin? %>
             <li>
             <%= link_to "ユーザ一覧", users_path %>
             </li>
             <li>
-              <%= link_to "出勤社員一覧", '#' %>
+              <%= link_to "出勤社員一覧", go_work_url %>
             </li>
             <li>
               <%= link_to "拠点情報の修正", '#' %>
@@ -25,6 +26,7 @@
             <li>
               <%= link_to "基本情報の修正", '#' %>
             </li>
+            <%# end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
