--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,10 @@
 <h1>ユーザ一覧</h1>
 <% end %>
 <div>
+  <%= form_tag import_users_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "インポート" %>
+<% end %>
 </div><!-- ここまで -->
 </div><!-- nav-left -->
     <div id="nav-search">
