--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
               <%= link_to "出勤社員一覧", go_work_url %>
             </li>
             <li>
-              <%= link_to "拠点情報の修正", '#' %>
+              <%= link_to "拠点情報の修正", bases_path %>
             </li>
             <li>
               <%= link_to "基本情報の修正", '#' %>
