--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -64,11 +64,13 @@
     </thead>
     <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
     <%= link_to "CSV出力", user_path(@user, params:{first_day: @first_day },format: :csv), class: "btn btn-primary" %><br>
-    <%= link_to "勤怠修正ログ(承認済)" , class: "btn btn-primary" %>
+    <%= link_to "勤怠修正ログ(承認済)","#" , class: "btn btn-primary" %>
     <tbody>
-      <% @dates.each do |day| %>
+      <% @dates.each_with_index do |day , i| %>
       <tr>
-        <td><%= link_to "残業申請", overwork_path, remote: true ,class: "btn btn-primary" %></td>
+        <td>
+        <%= link_to "残業申請", edit_overwork_user_attendance_path(@user,day), remote: true, class: "btn btn-primary" %>
+        <div id="edit_overwork" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
         <td><%= day.worked_on.to_s(:date) %></td>
         <td><% if day.worked_on.wday == 0 %>
               <span style="color:#ff0000;">日</span>
@@ -120,5 +122,3 @@
     </tfoot>
     </table>
 </div>
-
-<div class="modal fade" id="overwork-edit-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
