--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
         <%= link_to "ホーム", root_path %>
         </li>
         <% end %>
-        <% if logged_in? || current_user.admin? %>
-        <%# if current_user.admin? %>
+        <% if logged_in? %>
+        <% if current_user.admin? %>
             <li>
             <%= link_to "ユーザ一覧", users_path %>
             </li>
@@ -26,7 +26,7 @@
             <li>
               <%= link_to "基本情報の修正", '#' %>
             </li>
-            <%# end %>
+            <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
