--- a/app/assets/stylesheets/costum.scss
+++ b/app/assets/stylesheets/costum.scss
@@ -207,3 +207,10 @@ font-size:16px;/*検索ボタンのフォントサイズ*/
 .filefilter {
   width: 250px;
 }
+
+.color1 {
+  color: #000000;
+}
+.color2 {
+  color: red;
+}
